Revision history for {{$dist->name}}

{{$NEXT}}

          Fix Tar permissions. ( Kent Fredric , stolen from Module::Build )

4.101582  2010-06-07 18:23:04 America/New_York
          improve tests to work with new CPAN::Meta

          fix incorrect type constraint in UploadToCPAN

4.101580  2010-06-07 10:21:51 America/New_York
          make UploadToCPAN look at the right stash by default

4.101570  2010-06-06 23:36:58 America/New_York
          validate distmeta before writing to disk

          changes to Dist-Zilla's distribution metadata to validate

4.101550  2010-06-04 11:16:13 America/New_York
          a number of minor changes to documentation

          a few improvements to use of type constraints in Zilla.pm

          some methods that were undocumented have been _-prefixed

          ModuleBuild now turns on recursive_test_files unconditionally

          the install_command argument to $zilla->install should now be an
          arrayref

          suppressed a stringifying-undef warning when using UploadToCPAN

          no longer try to compose an obsolete Dist::Zilla::Config role

4.101540  2010-06-03 23:52:52 America/New_York
          INCOMPATIBLE CHANGES:

          New global config system!

          Your ~/.dzil/config.ini is now broken.  Running `dzil` should tell
          you how to fix it.  Probably just replace [!release] with [%PAUSE]
          and delete everything else.  Hope that helps!

          Major refactoring of our use of Config::MVP; this probably won't
          break anything unless you wrote your own config readers, which I'm
          pretty sure you haven't done!

          config parameters beginning with a colon are not passed to plugins
          (this should not really affect anyone)

          OTHER CHANGES:

          plugins are now registered as soon as their config section has been
          read

          Dist::Zilla::Role::Stash has been added
