@@ -33,6 +33,12 @@ sub _read_file {
 
   my $fname = $self->_original_name;
   open my $fh, '<', $fname or die "can't open $fname for reading: $!";
+
+  # This is needed or \r\n is filtered to be just \n on win32.
+  # Maybe :raw:utf8, not sure.
+  #     -- Kentnl - 2010-06-10
+  binmode $fh, ':raw';
+ 
   my $content = do { local $/; <$fh> };
 }
 
